# zephyrkit

./: cmake_fixed.py
application/appcore/: CMakeLists.txt  Kconfig  gdbx.sh  prj.conf
application/appcore/boards/: nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpuapp.overlay
application/appcore/component/: CMakeLists.txt
application/appcore/component/bt/: CMakeLists.txt  bthost_init.c  bthost_init.h
application/appcore/debugger/: CMakeLists.txt  core_debug.c  core_debug.h
application/appcore/src/: app_timer.c  app_timer.h  apple_ams.c  apple_ams.h  apple_ancs.c  apple_ancs.h  bt_disc.c  bt_disc.h  bt_user.c  ll_buff.c  ll_buff.h  main.c  test-ancs.c  timer_ii.c  timer_ii.h  timer_ii_test.c  timer_ii_zephyr.c  timer_patch.h
application/hello_world/: CMakeLists.txt
application/netcore/: CMakeLists.txt  Kconfig  prj.conf
application/netcore/src/: main.c
application/watch/: CMakeLists.txt  Kconfig  Makefile  README.rst  empty.c  gdbx.sh  prj.conf  version.c
application/watch/application/: CMakeLists.txt  main.c
application/watch/boards/: iwatchv0.conf
application/watch/cmake/: debugger.cmake  module.cmake  proto.cmake
application/watch/gui/: CMakeLists.txt  Kconfig
application/watch/gui/demo_guix_smart_watch/: CMakeLists.txt  alarm.c  calculator.c  clock.c  clock_add.c  contact.c  contact_info.c  custom_checkbox.c  custom_checkbox.h  custom_pixelmap_button_draw.c  demo_guix_smart_watch.c  demo_guix_smart_watch.h  expression_evaluate.c  game.c  guix_smart_watch.gxp  guix_smart_watch_resources.c  guix_smart_watch_resources.h  guix_smart_watch_specifications.c  guix_smart_watch_specifications.h  healthy.c  keyboard.c  map.c  message.c  scroll_wheel.c  settings.c  stopwatch.c  weather.c
application/watch/gui/honbow_watch/: CMakeLists.txt  app_info.ld  demo_guix_main.c  guix_language_resources_custom.c  guix_language_resources_custom.h  guix_simple.gxp  guix_simple_resources.c  guix_simple_resources.h  guix_simple_specifications.c  guix_simple_specifications.h
application/watch/gui/watch_face/: CMakeLists.txt  demo_guix_main.c  guix_simple_resources.c  guix_simple_resources.h  guix_simple_specifications.c  guix_simple_specifications.h
application/watch/testsuite/: CMakeLists.txt  Kconfig  adc_sensor_service_unit_test.c  adc_unit_test.c  ble_hr_unit_test.c  fatfs_unit_test.c  g_sensor_test.c  gpio_unit_test.c  icm42607_test.c  lis2dh_unit_test.c
application/watch/testsuite/ble/: CMakeLists.txt  Kconfig  Kconfig.serial
application/watch/testsuite/usermode/: CMakeLists.txt
rootkit/components/: CMakeLists.txt  Kconfig
rootkit/components/base/: CMakeLists.txt  env.c  env.h  ev_types.h  evmgr.c  evmgr.h  list.h  mac_addr.c  mac_addr.h  observer.c  schedule_service.c  schedule_service.h  sys_power.c  sys_power.h  time.h  u_thread.c  u_thread.h
rootkit/components/base/deprecated/: apollo3p_gpio_keys.c  blkio.c  blkio.h  input_event.c  input_event.h  ite7259_tp.c
rootkit/components/ble/: CMakeLists.txt  Kconfig
rootkit/components/ble/ambiq_ble/: CMakeLists.txt
rootkit/components/ble/ble-host/: CMakeLists.txt
rootkit/components/ble/ble-profiles/: CMakeLists.txt  cordio_profile_readme.md
rootkit/components/ble/wsf/: CMakeLists.txt
rootkit/components/cm_backtrace/: Kconfig  cm_backtrace.c
rootkit/components/gui/: CMakeLists.txt  Kconfig  guix_input_zephyr.c  guix_input_zephyr.h  guix_rgb565_swap_byteorder.c  guix_zephyr_init.c  guix_zephyr_notify.h  guix_zephyr_posix.c  gx_port.h
rootkit/components/gui/guix_widget/: guix_api.h  guix_checkbox.c
rootkit/components/gui/ux/: _ux_action.h  _ux_animation.h  _ux_button.h  ux_button.c  ux_move.c  ux_utils.c  ux_wrapper.c
rootkit/components/motion/: CMakeLists.txt  CWM_CustomDataStruct.h  CWM_EventStructure.h  Kconfig  OsApi.h  cwm_lib.h  cywee_cmd.c  cywee_cmd.h  cywee_motion.c  cywee_motion.h  simulate_signal.h
rootkit/components/motion/daily_sport_service/: daily_sport_ctrl.c  daily_sport_ctrl.h  gui_sport_cmd.c  gui_sport_cmd.h
rootkit/components/protobuf-c/: CMakeLists.txt
rootkit/components/rpmsg_hci/: Kconfig
rootkit/components/services/magnet/: CMakeLists.txt  magnet_svr.c  magnet_svr.c.bak  magnet_svr.h
rootkit/components/stp/: CMakeLists.txt  Kconfig  opc_chan.c  opc_proto.c  stp.h  stp_core.c  stp_core.h  stp_uart.c
rootkit/components/stp/app/: CMakeLists.txt  call_service.c  devinfo_service.c  gps_service.c  gps_service.h  music_service.h  remind_service.h  setting_service.c
rootkit/components/stp/ota/: CMakeLists.txt  ota_file.c  ota_file_fs.c  ota_file_ram.c
rootkit/components/stp/proto/: call.proto  devinfo.proto  factory.pb-c.c  factory.proto  gps.pb-c.h  heartrate.pb-c.c  heartrate.proto  locate.pb-c.c  locate.proto  music.pb-c.c  music.pb-c.h  music.proto  ota.proto  setting.proto  time.pb-c.c  time.pb-c.h  time.proto  transfer.pb-c.c  transfer.pb-c.h  transfer.proto  userinfo.pb-c.c  userinfo.pb-c.h  weather.pb-c.h
rootkit/components/uecc/: CMakeLists.txt  uECC.c  uECC_ll.h
rootkit/components/xmodem/: CMakeLists.txt  crc16.c  xmodem.c  xmodem_porting.c  xmodem_porting.h
rootkit/drivers/: CMakeLists.txt  Kconfig
rootkit/drivers/adc/: CMakeLists.txt  Kconfig.apollo3p  adc_apollo.c
rootkit/drivers/bluetooth/: Kconfig  hci_apollo3p.c  hci_apollo3p.c.bak
rootkit/drivers/display/: Kconfig
rootkit/drivers/flash/: CMakeLists.txt  Kconfig
rootkit/drivers/gpio/: CMakeLists.txt  Kconfig.apollo3p
rootkit/drivers/i2c/: Kconfig.apollo3p  i2c-message.h  i2c_apollo3p.c
rootkit/drivers/kscan/: Kconfig  Kconfig.cyttsp5  gpio_keys.c
rootkit/drivers/led/: Kconfig  motor_pwm.c
rootkit/drivers/misc/: Kconfig  Kconfig.cyttsp5  Kconfig.ite7259  Kconfig.key  Kconfig.mspi  Kconfig.rm6903  apollo3p_gpio_keys.h  rm6903_lcd.c  rm69092_lcd.c
rootkit/drivers/pwm/: apollo3p_ctimer.c
rootkit/drivers/sensor/: CMakeLists.txt  Kconfig
rootkit/drivers/sensor/cw6305/: cw6305.h
rootkit/drivers/serial/: Kconfig  Kconfig.apollo3p
rootkit/drivers/spi/: Kconfig.apollo3p  spi_apollo3p.c
rootkit/drivers/timer/: CMakeLists.txt  Kconfig
rootkit/drivers/zephyr/: Kconfig
(+1055 files in other folders)
